<resources>
    <string name="app_name">Notificacion Firebase</string>
    <string name="lanzar_notificacion">Lanzar Notificación</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="fcm_message">FCM Message</string>
    <string name="hint_nombre">Nombre Completo</string>
    <string name="hint_email">Correo electrónico</string>
    <string name="hint_comentario">Ingrese sus comentarios</string>
    <string name="hint_autor">J. R. Vivanco</string>
    <string name="hint_copyright">Desarrollado en Android Studio 2.2.3</string>

    <string name="pic_transition">pic transition</string>
    <string name="p_likes">10</string>
    <string name="p_name">Nube</string>
    <string name="post_label">publicación</string>
    <string name="tab_text_1">mascotas</string>
    <string name="tab_text_2">perfil</string>
    <string name="following">0</string>
    <string name="following_label">seguidos</string>
    <string name="followers">0</string>
    <string name="followers_label">seguidores</string>

    <string name="titulo_acerca">BIO del desarrollador</string>
    <string name="bio_nombre_titulo">Nombre:</string>
    <string name="bio_nombre_text">nombre</string>
    <string name="bio_lugar_nacimiento_titulo">Lugar de nacimiento:</string>
    <string name="bio_lugar_nacimiento_texto">lugar de nacimiento</string>
    <string name="bio_app_titulo">Aplicación:</string>
    <string name="bio_app_texto">aplicación</string>
    <string name="bio_fecha_desarrollo_titulo">Fecha de desarrollo:</string>
    <string name="bio_fecha_desarrollo_texto">fecha</string>
    <string name="bio_version_titulo">Versión:</string>
    <string name="bio_version_texto">versión</string>
    <string name="bio_sobre_mi_titulo">Sobre mí:</string>
    <string name="bio_sobre_mi_texto">comentario</string>
    <string name="bio_mi_nombre">Ramón Carrión</string>
    <string name="bio_mi_lugar_nac">España</string>
    <string name="bio_mi_info">Esta aplicación ha sido desarrollada para el curso de
                    "Desarrollo de aplicaciones con Android" de Coursera / UNAM. </string>
    <string name="app_version">0.0.3</string>
    <string name="app_fecha_desarrollo">Octubre 2020</string>

    <string name="action_contact">Contacto</string>
    <string name="action_about">Acerca de</string>
    <string name="action_favorites">Favoritos</string>
    <string name="action_configurar">Configurar Cuenta</string>
    <string name="recibir_notificaciones">Recibir Notificaciones</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mnuCuenta">Configurar Cuenta</string>
    <string name="txt_usuario">Escribe tu usuario</string>
    <string name="txtBtnGuardarCuenta">Guardar cuenta</string>
    <string name="txtRecibirNotificaciones">Recibir Notificaciones</string>

    <string name="contact_nombre">Nombre</string>
    <string name="contact_email">Email</string>
    <string name="contact_passw">Password</string>
    <string name="contact_mensaje">Mensaje:</string>
    <string name="btn_enviar">Enviar comentario</string>
    <string name="titulo_contacto">Dejame tu comentario</string>
</resources>