<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:title="@string/action_about"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_contact"
        android:orderInCategory="101"
        android:title="@string/action_contact"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_configurar"
        android:orderInCategory="102"
        android:title="@string/action_configurar"
        app:showAsAction="never"/>

    <item
        android:id="@+id/recibir_notificaciones"
        android:orderInCategory="103"
        android:title="@string/recibir_notificaciones"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_favorites"
        android:orderInCategory="104"
        android:title="@string/action_favorites"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_star_rating"/>

</menu>